# Ultra_Vision

./: CMakeLists.txt
common/: types.hpp
configs/: buff.yaml  camera.yaml  detector.yaml  tracker.yaml
io/camera/: GalaxyCamera.cpp  GalaxyCamera.hpp
models/: train.py
src/auto_aim/: energy_node.cpp  node.cpp
src/auto_aim/Kalman/: tracker.cpp  tracker.hpp
src/auto_aim/perception/: detector.cpp  detector.hpp  energy_detector.cpp  energy_detector.hpp  pnp_solver.cpp  pnp_solver.hpp
src/auto_aim/test/: CMakeLists.txt
src/auto_buff/: energy_node.cpp
src/auto_buff/Kalman/: kalman_filter.hpp
src/auto_buff/example/: CMakeLists.txt  video_test.cpp
src/auto_buff/include/: aimer.hpp  base_buff.hpp  config.hpp  detector_buff.hpp  fanblade.hpp  handle.hpp  solver.hpp  utils.hpp
src/auto_buff/src/: base_buff.cpp  config.cpp  detector_buff.cpp  fanblade.cpp  kalman_filter.cpp  utils.cpp
src/auto_buff/test/: CMakeLists.txt
tools/: camera_utils.hpp  config.hpp  logger.hpp  visualizer.hpp  yaml.hpp
